whole project added

--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -1,4 +1,11 @@
 <footer class="footer">
-	<div class="footer__container">
-	</div>
+  <div class="footer__container">
+    <div class="footer__inner">
+      <a href="tel:79818574624" class="footer__button menu__link"><span>+7 (981)
+          857-46-24</span></a>
+      <div class="footer__addres">г. Санкт-петербург, ул. Большая Конюшенная, 19</div>
+    </div>
+    <div class="footer__text">ИП Королёва А.А.</div>
+  </div>
+
 </footer>
