--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -11,9 +11,9 @@
         <li class="menu__item"><a data-goto=".about" href="" class="menu__link">О компании</a></li>
         <li class="menu__item"><a data-goto=".portfolio" href="" class="menu__link">Портфолио</a></li>
         <li class="menu__item"><a data-goto=".team" href="" class="menu__link">Команда</a></li>
-        <li class="menu__item"><a data-goto="" href="" class="menu__link">Как мы работаем</a></li>
-        <li class="menu__item"><a data-goto="" href="" class="menu__link">Отзывы клиентов</a></li>
-        <li class="menu__item"><a data-goto="" href="" class="menu__link">Оставить заявку</a></li>
+        <li class="menu__item"><a data-goto=".work" href="" class="menu__link">Как мы работаем</a></li>
+        <li class="menu__item"><a data-goto=".reviews" href="" class="menu__link">Отзывы клиентов</a></li>
+        <li class="menu__item"><a data-goto=".request" href="" class="menu__link">Оставить заявку</a></li>
       </ul>
     </nav>
     <a href="tel:79818574624" data-popup="#callback" class="header__button menu__link"><span>+7 (981)
