--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   })
 
   <body>
-    <dv class="wrapper">
+    <dv class="wrapper ">
       @@include('html/_header.htm',{})
       <main class="page">
         <section class="page-main main">
@@ -21,7 +21,7 @@
         </section>
         <section class="page-about about">
           <div class="about__container">
-            <h2 class="about__title">О нас</h2>
+            <h2 class="about__title title">О нас</h2>
             <div class="about__content">
               <div class="about__img"><img src="@img/about/about.png" alt="Стол с вазой"></div>
               <div class="about__inner">
@@ -34,9 +34,7 @@
               </div>
             </div>
           </div>
-
           <ul class=" about__container about__list">
-
             <li class="about__item"><span class="about__number">5 </span><span class="about__subtext">лет опыта</span>
             </li>
             <li class="about__item"><span class="about__number">100</span><span class="about__subtext">проектов</span>
@@ -44,12 +42,10 @@
             <li class="about__item"><span class="about__number">10</span><span class="about__subtext">наград</span>
             </li>
           </ul>
-
-
         </section>
         <section class="page-portfolio portfolio">
           <div class="portfolio__container">
-            <h2 class="portfolio__title">Наши работы</h2>
+            <h2 class="portfolio__title title">Наши работы</h2>
             <div class="portfolio__content">
               <a href="" class="portfolio__cart cart">
                 <img class="cart__img" src="@img/work/1.png" alt="Квартира-студия">
@@ -89,7 +85,7 @@
         </section>
         <section class="page-team team">
           <div class="team__container">
-            <h2 class="team__title">Команда</h2>
+            <h2 class="team__title title">Команда</h2>
             <ul class="team__list">
               <li class="team__item">
                 <img src="@img/team/1.png" alt="фото" class="team__img">
@@ -115,7 +111,7 @@
         </section>
         <section class="page-work work">
           <div class="work__container">
-            <h2 class="work__title">Как мы работаем</h2>
+            <h2 class="work__title title">Как мы работаем</h2>
             <ol class="work__list">
               <li class="work__item">
                 <p class="work__text">Знакомимся, выезжаем
@@ -134,6 +130,80 @@
                   расставляем мебель и цветы, вешаем шторы, находим места для мелочей</p>
               </li>
             </ol>
+          </div>
+        </section>
+        <section class="page-reviews reviews">
+          <div class="reviews__container">
+            <h2 class="reviews__title title">Отзывы</h2>
+            <div class="reviews__slider swiper">
+              <div class="reviews__wrapper swiper-wrapper">
+                <div class="reviews__slide swiper-slide slide">
+                  <div class="slide__wrap">
+                    <div class="slide__body">
+                      <p class="slide__text">«Восторг! Спасибо, за комфортную жизнь. Очень рада, что выбрала вашу студию
+                        для украшения своего дома.
+                      </p>
+                      <p class="slide__text">
+                        Работа шла быстро, было очень приятно общаться и взаимодействовать
+                        с сотрудниками. Не ожидала, что это будет так легко!
+                      </p>
+                      <p class="slide__text">
+                        Буду советовать и своим друзьям к вам обращаться!»</p>
+                      <p class="slide__name">АННА БЕЛОВСКАЯ</p>
+                    </div>
+                    <div class="slide__img">
+                      <img src="@img/review/1.png" alt="Отзыв">
+                      <img src="@img/review/2.png" alt="Отзыв">
+                    </div>
+                  </div>
+                </div>
+                <div class="reviews__slide swiper-slide slide">
+                  <div class="slide__wrap">
+                    <div class="slide__body">
+                      <p class="slide__text">«Восторг! Спасибо, за комфортную жизнь. Очень рада, что выбрала вашу студию
+                        для украшения своего дома.
+                      </p>
+                      <p class="slide__text">
+                        Буду советовать и своим друзьям к вам обращаться!»</p>
+                      <p class="slide__name">АННА</p>
+                    </div>
+                    <div class="slide__img">
+                      <img src="@img/review/2.png" alt="Отзыв">
+                      <img src="@img/review/1.png" alt="Отзыв">
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <button type="button" class="swiper-button-prev"></button>
+              <button type="button" class="swiper-button-next"></button>
+            </div>
+          </div>
+        </section>
+
+        <section class="page-request request">
+          <div class="request__container">
+            <div class="request__content">
+              <h2 class="request__title title">Оставить заявку</h2>
+              <p class="request__text">Оставьте свои контакты. Менеджер перезвонит
+                в удобное вам время и ответит на все вопросы.</p>
+              <form class="form" id="form" data-dev>
+
+                <div class="form__item">
+                  <input data-required type="text" name="name" placeholder="Ваше имя*" class="form__input"
+                    data-error="Введите Ваше Имя">
+                </div>
+                <div class="form__item">
+                  <input data-required type="tel" name="phone" placeholder="Введите телефон*"
+                    data-error="Введите Номер Телефона" class="form__input">
+                </div>
+                <div class="form__buttons">
+                  <button type="submit" class="button">Оставить заявку</button>
+                </div>
+              </form>
+            </div>
+            <div class="request__map">
+              <img src="@img/map/map.png" alt="Карта">
+            </div>
           </div>
         </section>
       </main>
